@@ -1,3 +1,7 @@
+2012-07-13         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* *.po,*.pot: Update for new release.
+
 2012-07-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* *.po,*.pot: Update for new release.
